test/MC/SVE/regression-tests/negative_tests/sve-st2d-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64E2Store8LSSZ
// Offset register Rm cannot be xzr
st2d {z2.d, z3.d}, p1, [x2, xzr, lsl #3]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
